# Lib

./: README.md  index.html  switch_core_super_deep_map.html
DOCS_WIKI/: index.html
Standardization/: Diagram_Standardization_Example.104db.bejson  bejson_certification_test_profile.bejson  gemini_model_registry.104a.bejson  groq_model_registry.104a.bejson  groq_standard_profile.bejson  openrouter_model_registry.104a.bejson  openrouter_readme_architect.bejson  openrouter_standard_profile.bejson  sample_diagram.104db.bejson  validate_sample_diagram.py
js/: chunker_config.json  lib_bejson_assets.js  lib_bejson_bejson.js  lib_bejson_core.js  lib_bejson_events.js  lib_bejson_grid.js  lib_bejson_input.js  lib_bejson_parse.js  lib_bejson_physics.js  lib_bejson_renderer.js  lib_bejson_state.js  lib_bejson_ui_screens.js  lib_bejson_validator.js  lib_mfdb_core.js  lib_mfdb_validator.js
md/: CSS_POLICY.md  lib_bejson_validator.md
py/: chunker_config.json  lib_bejson_validator_diagram.py
rs/bejson/: Cargo.toml
rs/bejson/src/: lib.rs  types.rs
sh/: lib_be_core.sh  lib_be_deps.sh  lib_bejson_core.sh  lib_bejson_parse.sh  lib_bejson_validator.sh  lib_mfdb_core.sh  lib_mfdb_validator.sh
tools/: Lib_Doc_Architect.py  bejson.sh  bejson_cli.py  bejson_data_converter.py  bejson_html_table.py  bejson_merge.py  bejson_query.py  bejson_schema_builder.py  bejson_stats.py  bejson_template_gen.py  cli_bejson_validator.py  dark_log.html  dark_table.html  diagram_viewer.html  rebuild_docs.py  test.bejson.json  white_log.html  white_table.html
ts/: bejson_assets.ts  bejson_core.ts  (+5 more)
(+337 files in other folders)
