[package]
name = "bejson"
version = "0.1.2"
edition = "2021"
authors = ["Elton Boehnen"]
description = "BEJSON core library - CoreEvo v1.2 Standard (MFDB Archive Support)"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tempfile = "3.1"
thiserror = "1.0"
zip = "0.6"
walkdir = "2.3"
